// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeedDetailComponent Rendering Should render 1`] = `
<yoo-feed-detail
  class="hydrated"
  data-yoo-feed-detail-host=""
>
  
  <div
    attr-layout="column"
    class="feed-details-container"
    data-yoo-feed-detail=""
  >
    <div
      attr-layout="row"
      class="feed-header"
      data-yoo-feed-detail=""
    >
      <yoo-avatar
        class="small"
        data-yoo-feed-detail=""
      />
      <div
        attr-layout="column"
        class="feed-heading"
        data-yoo-feed-detail=""
      >
        
        <div
          data-yoo-feed-detail=""
        >
          
        </div>
      </div>
    </div>
    <div
      class="feed-image"
      data-yoo-feed-detail=""
    >
      
    </div>
    <div
      class="feed-image-actions"
      data-yoo-feed-detail=""
    />
    <div
      attr-layout="row"
      class="feed-interactions"
      data-yoo-feed-detail=""
    >
      
    </div>
    <div
      class="feed-text"
      data-yoo-feed-detail=""
    >
      
    </div>
  </div>
</yoo-feed-detail>
`;

exports[`FeedDetailComponent Rendering Should render with a feed 1`] = `
<yoo-feed-detail
  class="hydrated"
  data-yoo-feed-detail-host=""
>
  
  <div
    attr-layout="column"
    class="feed-details-container"
    data-yoo-feed-detail=""
  >
    <div
      attr-layout="row"
      class="feed-header"
      data-yoo-feed-detail=""
    >
      <yoo-avatar
        class="small"
        data-yoo-feed-detail=""
      />
      <div
        attr-layout="column"
        class="feed-heading"
        data-yoo-feed-detail=""
      >
        <span
          data-yoo-feed-detail=""
        >
          Seb Mike
        </span>
        <div
          data-yoo-feed-detail=""
        >
          <span
            class="feed-date"
            data-yoo-feed-detail=""
          >
            .
          </span>
          <span
            class="feed-subheading"
            data-yoo-feed-detail=""
          >
             Shared in
            <span
              data-yoo-feed-detail=""
            >
               
            </span>
            <span
              class="feed-group"
              data-yoo-feed-detail=""
            >
              Best Group
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="feed-image"
      data-yoo-feed-detail=""
    >
      
    </div>
    <div
      class="feed-image-actions"
      data-yoo-feed-detail=""
    />
    <div
      attr-layout="row"
      class="feed-interactions"
      data-yoo-feed-detail=""
    >
      <div
        class="interaction"
        data-yoo-feed-detail=""
      >
        <i
          class="yo-heart-solid liked"
          data-yoo-feed-detail=""
        />
         
        <span
          class="interaction-counter"
          data-yoo-feed-detail=""
        >
          
        </span>
      </div>
      <div
        class="interaction"
        data-yoo-feed-detail=""
      >
        <i
          class="yo-comment"
          data-yoo-feed-detail=""
        />
         
        <span
          class="interaction-counter"
          data-yoo-feed-detail=""
        >
          
        </span>
      </div>
      <div
        class="interaction"
        data-yoo-feed-detail=""
      >
         
        <span
          class="interaction-counter"
          data-yoo-feed-detail=""
        >
          34 undefined
        </span>
      </div>
      <div
        class="interaction stable"
        data-yoo-feed-detail=""
      >
         
        <span
          class="interaction-counter"
          data-yoo-feed-detail=""
        >
          
        </span>
      </div>
    </div>
    <div
      class="feed-text"
      data-yoo-feed-detail=""
    >
      <div
        class="feed-description"
        data-yoo-feed-detail=""
      >
        <div
          class="description-content"
          data-yoo-feed-detail=""
        >
          This is the details of the feed ! 
        </div>
        
      </div>
      <div
        class="feed-hashtags"
        data-yoo-feed-detail=""
      >
        <span
          class="hashtag"
          data-yoo-feed-detail=""
        >
          #london 
        </span>
        <span
          class="hashtag"
          data-yoo-feed-detail=""
        >
          #skyrocket 
        </span>
      </div>
    </div>
  </div>
</yoo-feed-detail>
`;
